<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/menu_dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_home_black_24dp">
        </item>

        <item
            android:id="@+id/menu_sellice"
            android:title="@string/sellice"
            android:icon="@drawable/ic_input_black_24dp">
        </item>

        <item
            android:id="@+id/menu_addstock"
            android:title="@string/addstock"
            android:icon="@drawable/ic_add_circle_outline_black_24dp">
        </item>

        <item
            android:id="@+id/menu_messenger"
            android:title="@string/messenger"
            android:icon="@drawable/ic_chat_black_24dp">

        </item>


    </group>

    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/menu_about"
            android:title="@string/about"
            android:icon="@drawable/ic_info_black_24dp">

        </item>
        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp">

        </item>


    </group>

</menu>